--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                 <p>Some other text...</p>
             </div>
             <div class="modal-footer">
-                <h3>Modal Footer</h3>
+                <div class="cont">	
+<button class="share-btn"><span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62" class="share-img"></button>
+	
+    
+</div>
             </div>
         </div>
 
