mangler vitterligt en ting

--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Modal Header</h2>
+                <h2>Share article</h2>
             </div>
             <div class="modal-body">
-                <p>Some text in the Modal Body</p>
-                <p>Some other text...</p>
+                <p>Do you want to share this article?</p>
             </div>
             <div class="modal-footer">
                 <div class="cont">	
-<button class="share-btn"><span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62" class="share-img"></button>
+<button class="share-btn btn-grad">Share</button>
 	
     
 </div>
