--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                
         
         </div>
-         <button class="btn-grad" id="myBtn"
+         <button class="btn-grad myBtn"
                 title="https://worldpopulationreview.com/country-rankings/most-patriotic-countries">Share
                 Article</button>
     </div>
@@ -42,7 +42,7 @@
 
             </p>
         </div>
-        <button class="btn-grad" id="myBtn2">Share
+        <button class="btn-grad myBtn">Share
                 Article</button>
     </div>
 
